--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>
-            hihi
+        <title>my first web page
         </title>
         
     </head>  
